--- a/Jupyter/My_Numpy-100_Exercises.ipynb
+++ b/Jupyter/My_Numpy-100_Exercises.ipynb
@@ -1203,11 +1203,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 2. 3. 4.]\n",
+      " [0. 1. 2. 3. 4.]\n",
+      " [0. 1. 2. 3. 4.]\n",
+      " [0. 1. 2. 3. 4.]\n",
+      " [0. 1. 2. 3. 4.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "z = np.zeros((5,5))\n"
+    "z = np.zeros((5,5))\n",
+    "z += np.arange(0,5)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 38. 创建一个生成 10 个整数并用它来构建数组的生成器函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "[2.16529282 3.84251889 8.19383671 8.38484328 7.14614389 1.68049052\n",
+      " 0.97750661 3.74475893 5.76271576 9.46608317]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 带yield的函数是一个生成器，而不是一个函数了，这个生成器有一个函数就是next函数，\n",
+    "# next就相当于“下一步”生成哪个数，这一次的next开始的地方是接着上一次的next停止\n",
+    "# 的地方执行的，所以调用next的时候，生成器并不会从generate函数的开始执行，只是接着上\n",
+    "# 一步停止的地方开始，然后遇到yield后，return出要生成的数，此步就结束。\n",
+    "\n",
+    "def generate():\n",
+    "    for x in range(10):\n",
+    "        yield x\n",
+    "g = generate()\n",
+    "print(next(g))\n",
+    "print(next(g))\n",
+    "z = np.fromiter(generate(),dtype=float,count=-1)\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 39. 创建一个大小为 10 的向量，从0 到 1，并将0 排除"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 返回指定间隔内均匀间隔的数字。\n",
+    "Z = np.linspace(0,1,11,endpoint='False')[1:]\n",
+    "print(Z)\n",
+    "# print(np.info(np.linspace))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 40.  "
    ]
   }
  ],
