--- a/Jupyter/My_Numpy-100_Exercises.ipynb
+++ b/Jupyter/My_Numpy-100_Exercises.ipynb
@@ -1294,7 +1294,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 40.  "
+    "#### 40.  创建一个大小为10的向量，并进行排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 12 15 33 66 74 77 87 90 94]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.random.randint(1,100,10)\n",
+    "Z.sort()\n",
+    "print(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 41.如何累加一个数组中的元素，使其比np.sum() 更快 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reduce(a, axis=0, dtype=None, out=None, keepdims=False)\n",
+      "\n",
+      "Reduces `a`'s dimension by one, by applying ufunc along one axis.\n",
+      "\n",
+      "Let :math:`a.shape = (N_0, ..., N_i, ..., N_{M-1})`.  Then\n",
+      ":math:`ufunc.reduce(a, axis=i)[k_0, ..,k_{i-1}, k_{i+1}, .., k_{M-1}]` =\n",
+      "the result of iterating `j` over :math:`range(N_i)`, cumulatively applying\n",
+      "ufunc to each :math:`a[k_0, ..,k_{i-1}, j, k_{i+1}, .., k_{M-1}]`.\n",
+      "For a one-dimensional array, reduce produces results equivalent to:\n",
+      "::\n",
+      "\n",
+      " r = op.identity # op = ufunc\n",
+      " for i in range(len(A)):\n",
+      "   r = op(r, A[i])\n",
+      " return r\n",
+      "\n",
+      "For example, add.reduce() is equivalent to sum().\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "a : array_like\n",
+      "    The array to act on.\n",
+      "axis : None or int or tuple of ints, optional\n",
+      "    Axis or axes along which a reduction is performed.\n",
+      "    The default (`axis` = 0) is perform a reduction over the first\n",
+      "    dimension of the input array. `axis` may be negative, in\n",
+      "    which case it counts from the last to the first axis.\n",
+      "\n",
+      "    .. versionadded:: 1.7.0\n",
+      "\n",
+      "    If this is `None`, a reduction is performed over all the axes.\n",
+      "    If this is a tuple of ints, a reduction is performed on multiple\n",
+      "    axes, instead of a single axis or all the axes as before.\n",
+      "\n",
+      "    For operations which are either not commutative or not associative,\n",
+      "    doing a reduction over multiple axes is not well-defined. The\n",
+      "    ufuncs do not currently raise an exception in this case, but will\n",
+      "    likely do so in the future.\n",
+      "dtype : data-type code, optional\n",
+      "    The type used to represent the intermediate results. Defaults\n",
+      "    to the data-type of the output array if this is provided, or\n",
+      "    the data-type of the input array if no output array is provided.\n",
+      "out : ndarray, None, or tuple of ndarray and None, optional\n",
+      "    A location into which the result is stored. If not provided or `None`,\n",
+      "    a freshly-allocated array is returned. For consistency with\n",
+      "    :ref:`ufunc.__call__`, if given as a keyword, this may be wrapped in a\n",
+      "    1-element tuple.\n",
+      "\n",
+      "    .. versionchanged:: 1.13.0\n",
+      "       Tuples are allowed for keyword argument.\n",
+      "keepdims : bool, optional\n",
+      "    If this is set to True, the axes which are reduced are left\n",
+      "    in the result as dimensions with size one. With this option,\n",
+      "    the result will broadcast correctly against the original `arr`.\n",
+      "\n",
+      "    .. versionadded:: 1.7.0\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "r : ndarray\n",
+      "    The reduced array. If `out` was supplied, `r` is a reference to it.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> np.multiply.reduce([2,3,5])\n",
+      "30\n",
+      "\n",
+      "A multi-dimensional array example:\n",
+      "\n",
+      ">>> X = np.arange(8).reshape((2,2,2))\n",
+      ">>> X\n",
+      "array([[[0, 1],\n",
+      "        [2, 3]],\n",
+      "       [[4, 5],\n",
+      "        [6, 7]]])\n",
+      ">>> np.add.reduce(X, 0)\n",
+      "array([[ 4,  6],\n",
+      "       [ 8, 10]])\n",
+      ">>> np.add.reduce(X) # confirm: default axis value is 0\n",
+      "array([[ 4,  6],\n",
+      "       [ 8, 10]])\n",
+      ">>> np.add.reduce(X, 1)\n",
+      "array([[ 2,  4],\n",
+      "       [10, 12]])\n",
+      ">>> np.add.reduce(X, 2)\n",
+      "array([[ 1,  5],\n",
+      "       [ 9, 13]])\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.arange(10)\n",
+    "np.add.reduce(Z)\n",
+    "print(np.info(np.add.reduce))"
    ]
   }
  ],
