--- a/Jupyter/My_Numpy-100_Exercises.ipynb
+++ b/Jupyter/My_Numpy-100_Exercises.ipynb
@@ -1325,108 +1325,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 220,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = np.arange(10)\n",
+    "np.add.reduce(Z)\n",
+    "# print(np.info(np.add.reduce))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 42.创建两个随机的数组A 和 B，然后检查它们是否相等 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reduce(a, axis=0, dtype=None, out=None, keepdims=False)\n",
-      "\n",
-      "Reduces `a`'s dimension by one, by applying ufunc along one axis.\n",
-      "\n",
-      "Let :math:`a.shape = (N_0, ..., N_i, ..., N_{M-1})`.  Then\n",
-      ":math:`ufunc.reduce(a, axis=i)[k_0, ..,k_{i-1}, k_{i+1}, .., k_{M-1}]` =\n",
-      "the result of iterating `j` over :math:`range(N_i)`, cumulatively applying\n",
-      "ufunc to each :math:`a[k_0, ..,k_{i-1}, j, k_{i+1}, .., k_{M-1}]`.\n",
-      "For a one-dimensional array, reduce produces results equivalent to:\n",
-      "::\n",
-      "\n",
-      " r = op.identity # op = ufunc\n",
-      " for i in range(len(A)):\n",
-      "   r = op(r, A[i])\n",
-      " return r\n",
-      "\n",
-      "For example, add.reduce() is equivalent to sum().\n",
-      "\n",
-      "Parameters\n",
-      "----------\n",
-      "a : array_like\n",
-      "    The array to act on.\n",
-      "axis : None or int or tuple of ints, optional\n",
-      "    Axis or axes along which a reduction is performed.\n",
-      "    The default (`axis` = 0) is perform a reduction over the first\n",
-      "    dimension of the input array. `axis` may be negative, in\n",
-      "    which case it counts from the last to the first axis.\n",
-      "\n",
-      "    .. versionadded:: 1.7.0\n",
-      "\n",
-      "    If this is `None`, a reduction is performed over all the axes.\n",
-      "    If this is a tuple of ints, a reduction is performed on multiple\n",
-      "    axes, instead of a single axis or all the axes as before.\n",
-      "\n",
-      "    For operations which are either not commutative or not associative,\n",
-      "    doing a reduction over multiple axes is not well-defined. The\n",
-      "    ufuncs do not currently raise an exception in this case, but will\n",
-      "    likely do so in the future.\n",
-      "dtype : data-type code, optional\n",
-      "    The type used to represent the intermediate results. Defaults\n",
-      "    to the data-type of the output array if this is provided, or\n",
-      "    the data-type of the input array if no output array is provided.\n",
-      "out : ndarray, None, or tuple of ndarray and None, optional\n",
-      "    A location into which the result is stored. If not provided or `None`,\n",
-      "    a freshly-allocated array is returned. For consistency with\n",
-      "    :ref:`ufunc.__call__`, if given as a keyword, this may be wrapped in a\n",
-      "    1-element tuple.\n",
-      "\n",
-      "    .. versionchanged:: 1.13.0\n",
-      "       Tuples are allowed for keyword argument.\n",
-      "keepdims : bool, optional\n",
-      "    If this is set to True, the axes which are reduced are left\n",
-      "    in the result as dimensions with size one. With this option,\n",
-      "    the result will broadcast correctly against the original `arr`.\n",
-      "\n",
-      "    .. versionadded:: 1.7.0\n",
-      "\n",
-      "Returns\n",
-      "-------\n",
-      "r : ndarray\n",
-      "    The reduced array. If `out` was supplied, `r` is a reference to it.\n",
-      "\n",
-      "Examples\n",
-      "--------\n",
-      ">>> np.multiply.reduce([2,3,5])\n",
-      "30\n",
-      "\n",
-      "A multi-dimensional array example:\n",
-      "\n",
-      ">>> X = np.arange(8).reshape((2,2,2))\n",
-      ">>> X\n",
-      "array([[[0, 1],\n",
-      "        [2, 3]],\n",
-      "       [[4, 5],\n",
-      "        [6, 7]]])\n",
-      ">>> np.add.reduce(X, 0)\n",
-      "array([[ 4,  6],\n",
-      "       [ 8, 10]])\n",
-      ">>> np.add.reduce(X) # confirm: default axis value is 0\n",
-      "array([[ 4,  6],\n",
-      "       [ 8, 10]])\n",
-      ">>> np.add.reduce(X, 1)\n",
-      "array([[ 2,  4],\n",
-      "       [10, 12]])\n",
-      ">>> np.add.reduce(X, 2)\n",
-      "array([[ 1,  5],\n",
-      "       [ 9, 13]])\n",
-      "None\n"
+      "False\n",
+      "False\n",
+      "[1 0 0]\n",
+      "[0 0 1]\n"
      ]
     }
    ],
    "source": [
-    "Z = np.arange(10)\n",
-    "np.add.reduce(Z)\n",
-    "print(np.info(np.add.reduce))"
+    "A = np.random.randint(0,2,3)\n",
+    "B = np.random.randint(0,2,3)\n",
+    "\n",
+    "# 假设数组的大小相同，且其值可以存在一定的容差\n",
+    "# absolute(`a` - `b`) <= (`atol` + `rtol` * absolute(`b`))\n",
+    "# rtol:相对容差\n",
+    "# 绝对容差\n",
+    "equal = np.allclose(A,B, rtol=1, atol=0)\n",
+    "print(equal)\n",
+    "\n",
+    "# 数组大小必须相同，其值也必须相同\n",
+    "equal_2 = np.array_equal(A,B,)\n",
+    "print(equal_2)\n",
+    "print(A)\n",
+    "print(B)\n",
+    "\n",
+    "# print(np.info(np.allclose))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 43. 固定数组，使其只读"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "assignment destination is read-only",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-e7ca576a283b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriteable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mz\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: assignment destination is read-only"
+     ]
+    }
+   ],
+   "source": [
+    "z = np.zeros(10)\n",
+    "z.flags.writeable = False\n",
+    "z[0] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 44. 创建一个随机的 10 * 2 的矩阵，并将其平面坐标转换为极坐标 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.42347769 0.20420065 1.00471535 0.89022106 0.52110372 0.8533728\n",
+      " 0.95738368 1.17358522 0.4950449  0.46069154]\n",
+      "[0.76432846 1.28732602 0.96295935 1.43698972 0.41353163 0.10460425\n",
+      " 0.70688315 0.70970222 0.53382144 1.08030106]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.random.random((10,2))\n",
+    "X,Y = Z[:,0],Z[:,1]\n",
+    "R = np.sqrt(X ** 2 + Y ** 2)\n",
+    "T = np.arctan2(X,Y)\n",
+    "print(R)\n",
+    "print(T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 45. 创建一个大小为10的随机向量，并将其中最大值用0进行替换"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 4 6 6 7 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.random.randint(1,10,8)\n",
+    "# argmax 返回指定维度上的最大值的索引\n",
+    "Z[Z.argmax()] = 0\n",
+    "print(Z)\n",
+    "# print(np.info(np.argmax))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 46.  使用x 和 y 创建一个结构化数组，并[0,1] * [1,0]的方式覆盖其区域"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(0., 0.) (0., 0.) (0., 0.) (0., 0.) (0., 0.)]\n",
+      " [(0., 0.) (0., 0.) (0., 0.) (0., 0.) (0., 0.)]\n",
+      " [(0., 0.) (0., 0.) (0., 0.) (0., 0.) (0., 0.)]\n",
+      " [(0., 0.) (0., 0.) (0., 0.) (0., 0.) (0., 0.)]\n",
+      " [(0., 0.) (0., 0.) (0., 0.) (0., 0.) (0., 0.)]]\n",
+      "[[(0.  , 0.  ) (0.25, 0.  ) (0.5 , 0.  ) (0.75, 0.  ) (1.  , 0.  )]\n",
+      " [(0.  , 0.25) (0.25, 0.25) (0.5 , 0.25) (0.75, 0.25) (1.  , 0.25)]\n",
+      " [(0.  , 0.5 ) (0.25, 0.5 ) (0.5 , 0.5 ) (0.75, 0.5 ) (1.  , 0.5 )]\n",
+      " [(0.  , 0.75) (0.25, 0.75) (0.5 , 0.75) (0.75, 0.75) (1.  , 0.75)]\n",
+      " [(0.  , 1.  ) (0.25, 1.  ) (0.5 , 1.  ) (0.75, 1.  ) (1.  , 1.  )]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.zeros((5,5), dtype=[('x',float),('y',float)])\n",
+    "print(Z)\n",
+    "# print(np.info(np.zeros))\n",
+    "# np.meshgrid :从坐标向量返回坐标矩阵\n",
+    "# np.linespace:使用明确的数据将其范围进行等距分割\n",
+    "Z['x'], Z['y'] = np.meshgrid(np.linspace(0,1,5),\n",
+    "                             np.linspace(0,1,5))\n",
+    "print(Z)\n",
+    "# print(np.info(np.linspace))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  47. "
    ]
   }
  ],
